--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <artifactId>learning-english</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+            <java-version>1.6</java-version>
+            <maven.compiler.source>1.6</maven.compiler.source>
+            <maven.compile.target>1.6</maven.compile.target>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -21,12 +27,20 @@
             <artifactId>jlayer</artifactId>
             <version>1.0.1</version>
         </dependency>
-
-
     </dependencies>
+
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
