--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
             <java-version>1.6</java-version>
             <maven.compiler.source>1.6</maven.compiler.source>
             <maven.compile.target>1.6</maven.compile.target>
+            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
